
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int cmd ;


 int close (int) ;
 int die (char*) ;
 int printf (char*,char const*) ;
 int sleep (int) ;
 int snprintf (char*,int,char*,char const*) ;
 int strlen (char*) ;
 int tcp_connect (char*,int) ;
 scalar_t__ write (int,char*,int ) ;

int trigger_cgi(const char *cgi)
{
 char cmd[1024];
 int sock = tcp_connect("127.0.0.1", 80);

 printf("Triggering CGI: %s\n", cgi);

 snprintf(cmd, sizeof(cmd), "GET %s HTTP/1.0\r\n\r\n", cgi);
 if (write(sock, cmd, strlen(cmd)) < 0)
  die("write");
 sleep(1);
 close(sock);
 return 0;
}
